--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Legal Documents – Peastash</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      line-height: 1.6;
+      color: #222;
+      background: #ffffff;
+    }
+    h1 {
+      font-size: 1.9rem;
+      margin-bottom: 0.5rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+      margin-top: 2rem;
+    }
+    a {
+      color: #0b63ce;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    small {
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <h1>Peastash Legal Documents</h1>
+  <p>
+    These documents govern your use of the Peastash platform, including the mobile
+    applications and related services operated by <strong>The Candeed Corp</strong> (DBA “Peastash”).
+  </p>
+
+  <p><small>Last Updated: November 15, 2025</small></p>
+
+  <h2>Customer-Facing Policies</h2>
+  <ul>
+    <li><a href="terms-of-service.html">Terms of Service</a></li>
+    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+  </ul>
+
+  <h2>Partner Agreements</h2>
+  <ul>
+    <li><a href="courier-agreement.html">Courier Independent Contractor Agreement</a></li>
+    <li><a href="merchant-agreement.html">Merchant / Restaurant Agreement</a></li>
+  </ul>
+
+  <p>
+    For questions about these policies, you can contact us at
+    <a href="mailto:support@peastash.com">support@peastash.com</a>.
+  </p>
+</body>
+</html>
